--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
  </header>
  <section>
      <div class="image">
-      <img src="/Htmlcss/jioimages/swigg1.webp">
+      <img src="jioimages/swigg1.webp">
      </div>
      <div class="image">
-      <img src="/Htmlcss/jioimages/swigg2.webp">
+      <img src="jioimages/swigg2.webp">
      </div>
      <div class="image">
-        <img src="/Htmlcss/jioimages/swigg3.webp">
+        <img src="jioimages/swigg3.webp">
        </div>
        <div class="image"> 
-        <img src="/Htmlcss/jioimages/swigg4.webp">
+        <img src="jioimages/swigg4.webp">
        </div>
  </section>
  <section class="bod">
@@ -46,7 +46,7 @@
      </div></section>
      <section class="b2">
          <div class="s1">
-             <div class="img1"><img src="/Htmlcss/jioimages/swigg5.webp">
+             <div class="img1"><img src="jioimages/swigg5.webp">
                 <label>McDonalds</label> 
             <div class="tex2"> <label>American</label>
                 <div class="star">
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="s1">
-            <div class="img1"><img src="/Htmlcss/jioimages/swigg6.webp">
+            <div class="img1"><img src="jioimages/swigg6.webp">
                <label>Arya Bhavan</label> 
            <div class="tex2"> <label>South indian north indian</label>
                <div class="star">
@@ -62,7 +62,7 @@
            </div>
        </div>
        <div class="s1">
-        <div class="img1"><img src="/Htmlcss/jioimages/swigg7.webp">
+        <div class="img1"><img src="jioimages/swigg7.webp">
            <label>Hotel sagar(old sagar)</label> 
        <div class="tex2"> <label>South indian Beverages,chinese</label>
            <div class="star">
@@ -70,7 +70,7 @@
        </div>
    </div>
    <div class="s1">
-    <div class="img1"><img src="/Htmlcss/jioimages/swigg8.webp">
+    <div class="img1"><img src="jioimages/swigg8.webp">
        <label>Zam Zam Dosa Hut</label> 
    <div class="tex2"> <label>south indian</label>
        <div class="star" style="background-color: orangered;">
@@ -80,7 +80,7 @@
         </div> </section>
         <section class="b3">
          <div class="s1">
-            <div class="img1"><img src="/Htmlcss/jioimages/swiggy9.webp">
+            <div class="img1"><img src="jioimages/swiggy9.webp">
                <label>Sagar restaurants(new sagar)</label> 
            <div class="tex2"> <label>Arabian,Beverages,Biryani,chinese</label>
                <div class="star">
@@ -88,7 +88,7 @@
            </div>
        </div>
        <div class="s1">
-           <div class="img1"><img src="/Htmlcss/jioimages/swigg10.webp">
+           <div class="img1"><img src="jioimages/swigg10.webp">
               <label>Top Form</label> 
           <div class="tex2"> <label>South indian,North indian</label>
               <div class="star">
@@ -96,7 +96,7 @@
           </div>
       </div>
       <div class="s1">
-       <div class="img1"><img src="/Htmlcss/jioimages/swigg11.webp">
+       <div class="img1"><img src="jioimages/swigg11.webp">
           <label>kaapi koottam</label> 
       <div class="tex2"> <label>Kerala,indian</label>
           <div class="star">
@@ -104,7 +104,7 @@
       </div>
   </div>
   <div class="s1">
-   <div class="img1"><img src="/Htmlcss/jioimages/swigg12.webp">
+   <div class="img1"><img src="jioimages/swigg12.webp">
       <label>Hotel Sarovar</label> 
   <div class="tex2"> <label>South indian,chinese,biriyani</label>
       <div class="star">
@@ -114,7 +114,7 @@
         </div></section>
         <section class="b4">
             <div class="s1">
-               <div class="img1"><img src="/Htmlcss/jioimages/swigg13.webp">
+               <div class="img1"><img src="jioimages/swigg13.webp">
                   <label>Indian Coffe House</label> 
               <div class="tex2"> <label>South indian, Biryani,North indian,chinese</label>
                   <div class="star">
@@ -122,7 +122,7 @@
               </div>
           </div>
           <div class="s1">
-              <div class="img1"><img src="/Htmlcss/jioimages/swigg14.webp">
+              <div class="img1"><img src="jioimages/swigg14.webp">
                  <label>PureSouth</label> 
              <div class="tex2"> <label>indian,south indian,snacks</label>
                  <div class="star">
@@ -130,7 +130,7 @@
              </div>
          </div>
          <div class="s1">
-          <div class="img1"><img src="/Htmlcss/jioimages/swigg15.webp">
+          <div class="img1"><img src="jioimages/swigg15.webp">
              <label>Subway</label> 
          <div class="tex2"> <label>Healthy Food,salads,snacks</label>
              <div class="star" style="background-color: orangered;">
@@ -138,7 +138,7 @@
          </div>
      </div>
      <div class="s1">
-      <div class="img1"><img src="/Htmlcss/jioimages/swigg16.webp">
+      <div class="img1"><img src="jioimages/swigg16.webp">
          <label>Zam Zam Restaurants</label> 
      <div class="tex2"> <label>Arbian,Chinese,Beverages</label>
          <div class="star" style="background-color: orangered;">
@@ -148,7 +148,7 @@
            </div></section>
            <section class="b5">
             <div class="s1">
-               <div class="img1"><img src="/Htmlcss/jioimages/swigg17.webp">
+               <div class="img1"><img src="jioimages/swigg17.webp">
                   <label>Tasty Hut</label> 
               <div class="tex2"> <label>South indian</label>
                   <div class="star">
@@ -156,7 +156,7 @@
               </div>
           </div>
           <div class="s1">
-              <div class="img1"><img src="/Htmlcss/jioimages/swigg18.webp">
+              <div class="img1"><img src="jioimages/swigg18.webp">
                  <label>Dosa kada</label> 
              <div class="tex2"> <label>South Indian</label>
                  <div class="star">
@@ -164,7 +164,7 @@
              </div>
          </div>
          <div class="s1">
-          <div class="img1"><img src="/Htmlcss/jioimages/swigg19.webp">
+          <div class="img1"><img src="jioimages/swigg19.webp">
              <label>suprabatham veg</label> 
          <div class="tex2"> <label>South indian,Biriyani,chinese,snacks</label>
              <div class="star">
@@ -172,7 +172,7 @@
          </div>
      </div>
      <div class="s1">
-      <div class="img1"><img src="/Htmlcss/jioimages/swigg20.webp">
+      <div class="img1"><img src="jioimages/swigg20.webp">
          <label>New Malabar Family Restaurant</label> 
      <div class="tex2"> <label>Kerala, indian, chinese</label>
          <div class="star">
@@ -182,7 +182,7 @@
            </div></section>
            <section class="b6">
             <div class="s1">
-               <div class="img1"><img src="/Htmlcss/jioimages/swigg21.jpg">
+               <div class="img1"><img src="jioimages/swigg21.jpg">
                   <label>Milma</label> 
               <div class="tex2"> <label>Ice Cream</label>
                   <div class="star">
@@ -190,7 +190,7 @@
               </div>
           </div>
           <div class="s1">
-              <div class="img1"><img src="/Htmlcss/jioimages/swigg22.webp">
+              <div class="img1"><img src="jioimages/swigg22.webp">
                  <label>Clock Tower Restaurant</label> 
              <div class="tex2"> <label>Kerala, Biriyani, Arabian, Combo, chinese</label>
                  <div class="star">
@@ -198,7 +198,7 @@
              </div>
          </div>
          <div class="s1">
-          <div class="img1"><img src="/Htmlcss/jioimages/swigg25.webp">
+          <div class="img1"><img src="jioimages/swigg25.webp">
              <label>Shere Punjab</label> 
          <div class="tex2"> <label>North indian,Punjabi, Snacks</label>
              <div class="star">
@@ -206,7 +206,7 @@
          </div>
      </div>
      <div class="s1">
-      <div class="img1"><img src="/Htmlcss/jioimages/swigg24.webp">
+      <div class="img1"><img src="jioimages/swigg24.webp">
          <label>Merakki</label> 
      <div class="tex2"> <label>Arabian,south indian,kerala</label>
          <div class="star">
