--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
  <header>
-     <div class="logo"><img src="/Htmlcss/jioimages/swiggylog.jpg"></div>
+     <div class="logo"><img src="jioimages/swiggylog.jpg"></div>
      <div  class="tex"><a href="">Other</a> Kozhikode,Kerala,india</div>
      <div class="tex1"><i class="fa-solid fa-magnifying-glass"></i>search
         <i class=" fa fa-solid fa-badge-percent" ></i>offers<label>new</label>
